[project]
name = "backpack-mm-simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "websocket-client>=1.8.0",
]
